Close button added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="Practica 01 Saludo"
+            android:text="@string/titulo"
             android:textSize="30sp"
             android:textColor="@color/otroColor"
             android:paddingBottom="10sp">
@@ -26,7 +26,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txtNombre"
+            android:id="@+id/txtNombreFL"
+            android:autofillHints=""
             android:hint="@string/nombre"
             android:inputType="text"
             android:paddingBottom="10sp">
@@ -55,6 +56,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnLimpiar"
             android:text="@string/Limpiar"
+            android:paddingBottom="10sp">
+        </Button>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnSalir"
+            android:text="@string/Salir"
             android:paddingBottom="10sp">
         </Button>
 
