code corrected - options menu added - BMI window added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="miColor">#8BC34A</color>
     <color name="otroColor">#00BCD4</color>
+    <color name="encabezado">#042234</color>
 </resources>
