Quote button feature added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#d22525</color>
     <color name="miColor">#8BC34A</color>
     <color name="otroColor">#00BCD4</color>
     <color name="encabezado">#042234</color>
